# kimai-sync

./: .env.sample  README.md  pyproject.toml
kimai_sync/: main.py  settings.py
kimai_sync/lib/: jira.py  kimai.py
kimai_sync/schemas/: jira.py  kimai.py
