[tool.poetry]
name = "kimai-sync"
version = "0.1.0"
description = "Command-line project to help syncing Jira issues to Kimai, a time-tracking platform."
authors = ["Victor Torres <victor.torres@sangoma.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
